feat: Replace MUI with Beer CSS

--- a/imagey-web/src/translation/locales/de.json
+++ b/imagey-web/src/translation/locales/de.json
@@ -16,5 +16,8 @@
   "No images found": "Keine Bilder gefunden",
   "Error loading {{name}}": "Fehler beim Laden von {{name}}",
   "Images": "Bilder",
-  "Chats": "Chats"
+  "Chats": "Chats",
+  "Email": "Email",
+  "Confirm": "Bestätigen",
+  "Cancel": "Abbrechen"
 }
