fix: login dialog

--- a/imagey-web/src/translation/locales/en.json
+++ b/imagey-web/src/translation/locales/en.json
@@ -1,23 +1,24 @@
 {
-  "Loading public key": "Loading public key",
-  "Uknown Authentication Error": "Uknown Authentication Error",
-  "Registration Mail with verification link was sent": "Registration Mail with verification link was sent",
-  "Mail with login link was sent": "Mail with login link was sent",
   "Authentication in progress": "Authentication in progress",
-  "Select a password for this device": "Select a password for this device",
-  "Device registered, you can now activate it with another device": "Device registered, you can now activate it with another device",
+  "Cancel": "Cancel",
+  "Chats": "Chats",
+  "Confirm": "Confirm",
   "Device key missing, please reregister device": "Device key missing, please reregister device",
-  "Input the password for this device": "Input the password for this device",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Wrong password": "Wrong password",
-  "No chats available": "No chats available",
-  "No image found": "No image found",
-  "Loading images": "Loading images",
-  "No images found": "No images found",
+  "Device registered, you can now activate it with another device": "Device registered, you can now activate it with another device",
+  "Email": "Email",
   "Error loading {{name}}": "Error loading {{name}}",
   "Images": "Images",
-  "Chats": "Chats",
-  "Email": "Email",
-  "Confirm": "Confirm",
-  "Cancel": "Cancel"
+  "Input the password for this device": "Input the password for this device",
+  "Loading images": "Loading images",
+  "Loading public key": "Loading public key",
+  "Mail with login link was sent": "Mail with login link was sent",
+  "No chats available": "No chats available",
+  "No image found": "No image found",
+  "No images found": "No images found",
+  "Please enter a valid email address": "Please enter a valid email address",
+  "Please enter your email to use Imagey.": "Please enter your email to use Imagey.",
+  "Registration Mail with verification link was sent": "Registration Mail with verification link was sent",
+  "Select a password for this device": "Select a password for this device",
+  "Uknown Authentication Error": "Uknown Authentication Error",
+  "Wrong password": "Wrong password"
 }
