--- a/imagey-web/src/translation/locales/de.json
+++ b/imagey-web/src/translation/locales/de.json
@@ -1,23 +1,24 @@
 {
-  "Loading public key": "Öffentlicher Schlüssel wird geladen",
-  "Uknown Authentication Error": "Unbekannter Authentifizierungsfehler",
-  "Registration Mail with verification link was sent": "Registrierungsmail mit Verifizierungslink wurde versendet",
-  "Mail with login link was sent": "Mail mit Login-Link wurde versendet",
   "Authentication in progress": "Authentifizierung wird durchgeführt",
-  "Select a password for this device": "Password für dieses Gerät wählen",
-  "Device registered, you can now activate it with another device": "Dieses Gerät ist jetzt registriert. Es kann nun mit einem anderen Gerät freigeschaltet werden.",
+  "Cancel": "Abbrechen",
+  "Chats": "Chats",
+  "Confirm": "Bestätigen",
   "Device key missing, please reregister device": "Der Geräteschlüssel konnte nicht gefunden werden. Das Gerät muss neu registriert werden.",
-  "Input the password for this device": "Password für dieses Gerät eingeben",
-  "Please enter a valid email address": "Gültige E-Mail-Adresse eingeben",
-  "Wrong password": "Falsches Password",
-  "No chats available": "Keine Chats vorhanden",
-  "No image found": "Bild nicht vorhanden",
-  "Loading images": "Bilder werden geladen",
-  "No images found": "Keine Bilder gefunden",
+  "Device registered, you can now activate it with another device": "Dieses Gerät ist jetzt registriert. Es kann nun mit einem anderen Gerät freigeschaltet werden.",
+  "Email": "Email",
   "Error loading {{name}}": "Fehler beim Laden von {{name}}",
   "Images": "Bilder",
-  "Chats": "Chats",
-  "Email": "Email",
-  "Confirm": "Bestätigen",
-  "Cancel": "Abbrechen"
+  "Input the password for this device": "Password für dieses Gerät eingeben",
+  "Loading images": "Bilder werden geladen",
+  "Loading public key": "Öffentlicher Schlüssel wird geladen",
+  "Mail with login link was sent": "Mail mit Login-Link wurde versendet",
+  "No chats available": "Keine Chats vorhanden",
+  "No image found": "Bild nicht vorhanden",
+  "No images found": "Keine Bilder gefunden",
+  "Please enter a valid email address": "Gültige E-Mail-Adresse eingeben",
+  "Please enter your email to use Imagey.": "Bitte geben Sie ihre Email ein, um Imagey nutzen zu können.",
+  "Registration Mail with verification link was sent": "Registrierungsmail mit Verifizierungslink wurde versendet",
+  "Select a password for this device": "Password für dieses Gerät wählen",
+  "Uknown Authentication Error": "Unbekannter Authentifizierungsfehler",
+  "Wrong password": "Falsches Password"
 }
